# objection

./: 230129-TorchVision Object Detection Tutorial.ipynb  Examples.ipynb  README.md  pyproject.toml
notebooks/: 230129-Example 1.ipynb  230129-TorchVision Object Detection.ipynb
runs/Feb16_20-19-17_Jerome-Wynne.local/: events.out.tfevents.1676578757.Jerome-Wynne.local.78398.0
runs/Feb16_20-20-01_Jerome-Wynne.local/: events.out.tfevents.1676578801.Jerome-Wynne.local.83781.0
runs/Feb16_20-20-33_Jerome-Wynne.local/: events.out.tfevents.1676578833.Jerome-Wynne.local.83795.0
runs/Feb16_20-21-18_Jerome-Wynne.local/: events.out.tfevents.1676578878.Jerome-Wynne.local.83943.0
runs/Feb16_20-21-45_Jerome-Wynne.local/: events.out.tfevents.1676578905.Jerome-Wynne.local.83968.0
runs/Feb16_20-26-03_Jerome-Wynne.local/: events.out.tfevents.1676579163.Jerome-Wynne.local.84069.0
runs/Feb16_20-31-23_Jerome-Wynne.local/: events.out.tfevents.1676579483.Jerome-Wynne.local.84168.0
runs/Feb16_20-48-46_Jerome-Wynne.local/: events.out.tfevents.1676580526.Jerome-Wynne.local.84730.0
runs/Feb16_20-50-25_Jerome-Wynne.local/: events.out.tfevents.1676580625.Jerome-Wynne.local.84730.1
runs/Feb16_20-51-05_Jerome-Wynne.local/: events.out.tfevents.1676580665.Jerome-Wynne.local.84793.0
runs/Feb16_21-00-39_Jerome-Wynne.local/: events.out.tfevents.1676581239.Jerome-Wynne.local.84954.0
runs/Feb16_21-29-23_Jerome-Wynne.local/: events.out.tfevents.1676582963.Jerome-Wynne.local.85553.0
src/boilerplate/detection/: coco_utils.py
src/fortuna/: Examples.ipynb  _ObjectDetectionDataset.py  _ObjectDetectionModel.py  __init__.py  _version.py
src/fortuna/data/: __init__.py
src/fortuna/models/: __init__.py  _get_model.py
src/fortuna/torchutils/: coco_utils.py  engine.py
src/objection/: _ObjectDetectionDataset.py  _ObjectDetectionModel.py  _TrainingConfiguration.py  _version.py
tests/: test_get_hello.py
(+23 files in other folders)
