[build-system]
requires = [
    "setuptools>=64",
    "setuptools_scm[toml]>=6.2" # For version numbers from git.
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools_scm]
write_to = "src/objection/_version.py"

[tool.ruff]
line-length = 120

[project]
name = "objection"
dynamic = ["version"]
description = "A Python package that simplifies the workflow for creating a semantic segmentation/object detection model."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "torchvision",
    "torch",
    "pycocotools",
    "numpy",
    "tensorboard"
]

[project.optional-dependencies]
develop = [
    "pytest",
    "pytest-cov",
    "black>=22.3.0",
    "pre-commit>=2.20.0",
    "ruff",
    "furo>=2022.12.7",
    "build>=0.10.0",
    "jupyter",
    "notebook",
]
